@@ -7,7 +7,7 @@ player setups available in SimSpark, their configuration and usage.
 \section{Internal Monitor}
 
 The internal monitor implementation is part of the SimSpark server. It
-is enabled in the \texttt{simspark.rb} setup script by enabling the
+is enabled in the \texttt{rcssserver3d.rb} setup script by enabling the
 rendering and input plugins of the server. To do so please uncomment
 the lines \texttt{sparkSetupRendering()} and
 \texttt{sparkSetupInput()}, i.e. remove the leading \texttt{'\#'} comment markers.
